--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="header bg-white">
     <div class="inner-wrapper d-flex">
       <figure class="logo">
-        <img src="./assets/images/logo_AS.svg" alt="Logotipo de Alberto Sancho" width="200" height="auto">
+        <img src="./assets/images/logo_AS.svg" alt="Logotipo de Alberto Sancho" width="200" height="67">
       </figure>
       <nav id="js-main-menu" class="main-menu">
         <i class="fa-solid fa-bars fa-xl" aria-label="Menú principal"></i>
@@ -68,43 +68,43 @@
         <h2 class="sora-regular fs-md">Mis <span class="sora-extrabold">conocimientos</span></h2>
         <div class="skills d-flex">
           <div class="skill d-flex border-solid">
-            <img src="./assets/images/skills/php.svg" alt="Logotipo de PHP" width="40" height="auto">
+            <img src="./assets/images/skills/php.svg" alt="Logotipo de PHP" width="296" height="150">
             <p class="sora-bold">PHP</p>
           </div>
           <div class="skill d-flex border-solid">
-            <img src="./assets/images/skills/js.svg" alt="Logotipo de Javascript" width="40" height="auto">
+            <img src="./assets/images/skills/js.svg" alt="Logotipo de Javascript" width="150" height="150">
             <p class="sora-bold">Javascript</p>
           </div>
           <div class="skill d-flex border-solid">
-            <img src="./assets/images/skills/sass.svg" alt="Logotipo de Sass" width="40" height="auto">
+            <img src="./assets/images/skills/sass.svg" alt="Logotipo de Sass" width="200" height="150">
             <p class="sora-bold">Sass/Scss</p>
           </div>
           <div class="skill d-flex border-solid">
-            <img src="./assets/images/skills/mysql.svg" alt="Logotipo de MySql" width="40" height="auto">
+            <img src="./assets/images/skills/mysql.svg" alt="Logotipo de MySql" width="221" height="150">
             <p class="sora-bold">MySql</p>
           </div>
           <div class="skill d-flex border-solid">
-            <img src="./assets/images/skills/git.svg" alt="Logotipo de Git" width="40" height="auto">
+            <img src="./assets/images/skills/git.svg" alt="Logotipo de Git" width="150" height="150">
             <p class="sora-bold">Git</p>
           </div>
           <div class="skill d-flex border-solid bg-black c-white">
-            <img src="./assets/images/skills/drupal.svg" alt="Logotipo de Drupal" width="40" height="auto" class="fill-white">
+            <img src="./assets/images/skills/drupal.svg" alt="Logotipo de Drupal" width="115" height="150" class="fill-white">
             <p class="sora-bold">Drupal</p>
           </div>
           <div class="skill d-flex border-solid">
-            <img src="./assets/images/skills/wordpress.svg" alt="Logotipo de Wordpress" width="40" height="auto">
+            <img src="./assets/images/skills/wordpress.svg" alt="Logotipo de Wordpress" width="150" height="150">
             <p class="sora-bold">Wordpress</p>
           </div>
           <div class="skill d-flex border-solid">
-            <img src="./assets/images/skills/bootstrap.svg" alt="Logotipo de Bootstrap" width="40" height="auto">
+            <img src="./assets/images/skills/bootstrap.svg" alt="Logotipo de Bootstrap" width="188" height="150">
             <p class="sora-bold">Bootstrap</p>
           </div>
           <div class="skill d-flex border-solid">
-            <img src="./assets/images/skills/figma.svg" alt="Logotipo de Figma" width="40" height="auto">
+            <img src="./assets/images/skills/figma.svg" alt="Logotipo de Figma" width="105" height="150">
             <p class="sora-bold">Figma</p>
           </div>
           <div class="skill d-flex border-solid">
-            <img src="./assets/images/skills/google.svg" alt="Logotipo de Google" width="40" height="auto">
+            <img src="./assets/images/skills/google.svg" alt="Logotipo de Google" width="147" height="150">
             <p class="sora-bold">GoogleApps</p>
           </div>
         </div>
@@ -168,7 +168,7 @@
     </section>
     <div class="footer inner-wrapper d-flex">
       <figure class="footer__logo">
-        <img src="./assets/images/logo_AS.svg" alt="Logotipo de Alberto Sancho" width="200" height="auto">
+        <img src="./assets/images/logo_AS.svg" alt="Logotipo de Alberto Sancho" width="200" height="67">
       </figure>
       <div class="footer__social">
         <ul class="d-flex">
